syntax = "proto3";

package facade;

// баланс хранится в центах
// userId это guid
// получаем баланс по id пользователя

service BalanceController {
  rpc RefillBalance (RefillBalanceRequest) returns (RefillBalanceResponse);
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse);
}

message RefillBalanceRequest {
  string userId = 1;
  string transactionId = 2;
  uint64 refillSum = 3;
}

message RefillBalanceResponse {
  oneof response {
    int32 status = 1;
    RequsetResponse error = 2;
  }
}

message RequsetResponse {
  int32 code = 1;
  string message = 2;
}

message GetBalanceResponse {
  oneof response {
    uint64 total = 1;
    RequsetResponse error = 2;
  }
}

message GetBalanceRequest {
  string userId = 1;
}



service ProductsController {
  rpc AddProduct (AddProductRequest) returns (Response);
  rpc GetProducts (UserId) returns (ProductResponse);
}

message Product {
  string productName = 1;
  uint64 productCount = 2;
}

message AddProductRequest {
  string userId = 1;
  Product product = 2;
}

message ProductResponse {
  repeated GetProducts products = 1;
}

message GetProducts {
  string productId = 1;
  string productName = 2;
  uint64 productCount = 3;
}

message Response {
  string response = 1;
}

message UserId {
  string userId = 1;
}
